tests/error/protocol_errors/inheritance.err
Error: Unsupported (at $FILE:7:14)
  | 
5 | 
6 | @guppy.protocol
7 | class MyProto(OtherClass):
  |               ^^^^^^^^^^ Protocol inheritance is not supported

Guppy compilation failed due to 1 previous error
